# anddani.github.io

./: .gitignore  LICENCE  README.md  background.aseprite  elm.json  flake.nix  index.md  input.css  mix.exs  package-lock.json  package.json  site.cabal  style.css  tailwind.config.js  tokkuri.aseprite
.github/workflows/: _build_distribution.yml  deploy.yml  deploy_pages.yml  pr.yml
.zed/: settings.json
app/: Api.elm  Article.elm  Effect.elm  Ellie.elm  Main.hs  MakeThumbnails.hs  MarkdownCodec.elm  MarkdownRenderer.elm  Shared.elm  Site.elm  SyntaxHighlightTheme.elm  TailwindMarkdownRenderer.elm
app/Route/: Index.elm
app/Route/Blog/: Slug_.elm
app/UI/: ArticleBox.elm  Box.elm  Icons.elm  Typography.elm
assets/: package-lock.json  package.json  tokkuri.aseprite
assets/css/: app.css
assets/js/: app.js  stars.js
config/: config.exs  dev.exs  runtime.exs  test.exs
content/blog/: 01-test.md  02-test-2.md
css/: input.css
lib/: app_web.ex
lib/app/: application.ex  recipes.ex
lib/app/recipes/: cache.ex  recipe.ex
lib/app_web/: endpoint.ex  router.ex
lib/app_web/components/: button_layouts.ex  core_components.ex  layouts.ex  surfaces.ex
review/: elm.json
sake/: dassai-45-nigori.md  narutotai-ginjo-nama-genshu.md  nezumi-otoko-jungin.md  ozeki-one-cup-nigori.md  ozeki-one-cup.md  rokkasen-junmai-godanjikomi-nigori.md  suigei-drunken-whale-tokubetsu-junmai.md  tamano-hikari-junmai-ginjo.md  tengumai-junmai-daiginjo.md  yuki-otoko-yeti.md
templates/: default.html  landing.html  sake-layout.html  sake-list.html
test/app/: recipes_test.exs
(+20 files in other folders)
