cabal-version: 3.0
name:          site
version:       0.1.0.0

executable site
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base   >= 4.14 && < 5
    , hakyll >= 4.15 && < 5
  ghc-options:      -threaded
  default-language: Haskell2010

executable make-thumbnails
  main-is:          MakeThumbnails.hs
  hs-source-dirs:   app
  build-depends:
    , base      >= 4.14 && < 5
    , directory >= 1.3  && < 2
    , filepath  >= 1.4  && < 2
    , process   >= 1.6  && < 2
  ghc-options:      -threaded
  default-language: Haskell2010
